# fridge-manage-server

./: .env  Cargo.toml  compose.yaml
env/: .env  mysql_config
migrations/: 20241111153301_schema.sql
src/: foods.rs  lib.rs  users.rs  util.rs
src/foods/: repo.rs
src/users/: repo.rs
