[package]
name = "fridge-manage-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
http-body-util = "0.1.2"
hyper = "1.5.0"
hyper-util = { version = "0.1.8", features = ["full"] }
mime = "0.3.17"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
